[gd_scene load_steps=3 format=3 uid="uid://bvqaa760tch0l"]

[ext_resource type="Script" path="res://Scripts/teletransporte.gd" id="1_llja0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2xtie"]
size = Vector2(33, 33)

[node name="AreaTeletransporte" type="Area2D"]
collision_mask = 2
script = ExtResource("1_llja0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_2xtie")

[node name="PuntoDeTeletransporte" type="Marker2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="tele_activado" from="." to="." method="_on_tele_activado"]
